--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -5,8 +5,10 @@
   xmlns:f="http://xmlns.jcp.org/jsf/core"
   xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
   <h:head>
+    <title>Currency Converter 9000.1</title>
   </h:head>
   <h:body>
+    <h1>PRO CURRENCY CONVERTAH</h1>
     <h:form id="converter">
       <c:if test="#{viewBacking.targetFailed}">
         <div>#{viewBacking.targetError}</div>
